@@ -1,38 +1,0 @@
-#!/bin/bash
-#
-# Test map_convert.py against map_convert.pl.
-# If these scripts are really equivalent, we should see no diffs.
-
-# UMC should point at a mirror of the campaign server
-UMC=../../umc
-TERRAIN=../terrain.cfg
-
-# Clear the decks
-find $UMC -type f -regex '.*-p[ly]' -exec rm {} \;
-
-# The enumeration relies on $ not being in any filename
-for file in `find $UMC -name '*.cfg' | tr ' ' '$'; find $UMC -type f \! -name '*.png' \! -name '*.jpg' -wholename '*/maps/*'`
-do
-	file=`echo $file | tr '$' ' '`
-	if map_convert.pl ${TERRAIN} "${file}" "${file}-pl"
-	then
-		if map_convert.py "${file}" "${file}-py"
-		then
-			if diff -u "${file}-pl" "${file}-py"
-			then
-			    rm "${file}-pl" "${file}-py"
-			else
-			    echo "${file}: regression failed"
-			fi
-		else
-			echo "${file}: Python conversion failed"
-			rm "${file}-pl" 
-			exit 1
-		fi
-	else
-		echo "${file}: Perl conversion failed"
-		continue
-	fi
-done
-
-exit 0
